jEdit 5.1 version history
       (changes since jEdit 5.0pre1)
:encoding=UTF-8:

{{{ Version 5.1pre1

Thanks to Jarek Czekalski, Thomas Meyer, Matthieu Casanova, Alan Ezust,
Malathi, Vladimir Avdonin, Eric Le Lay and Maik Nijhuis
for contributing to this release.

{{{ Bug fixes

- Undo restores selection state in simple cases (deletions, replaces
  on simple range selections). (patch #1570553 Maik Nijhuis, Thomas Meyer,
  Jarek Czekalski)

- Added a right click popup menu with a copy action in the Error dialog
  (#3557023 Matthieu Casanova)

- Fixed shellscript do escape single quote with backslash
  (#3557453 Matthieu Casanova)

- Fix a case where a NPE occurs when removing a plugin
  (#3557441 Matthieu Casanova) [5.0pre2]

- Filter not synchronizing in search dialog when
  "All buffers" is selected. (bug #1646584, patch #3549905 Eric Le Lay)

- Recognizing "Extra word characters" in "Whole word" option in
  searches (bug #3522497, patch #3543524 Malathi) [5.0pre2]

- Fix high memory usage for large search&replace all operations.
  (Patch #3531515 by Thomas Meyer)

- Fix pressing return in parent files of the VFS browser that do not browse 
  the selected folder as it should (patch #3543499 by Eric Le Lay) [5.0pre2]

- Fixed unreasonable quadratic operations which could be observable on
  big search&replace-all. (Patch #3533838 by Thomas Meyer)

- Avoided unreasonable memory consumption by duplicate String instances
  that could be allocated for each occurrence in a big
  search&replace-all. (Patch #3528619 by Thomas Meyer)

- Fixed VFS session not ended in VFS.copy() api (#3522406 Matthieu Casanova)

- Use of a scrollable list for delete dialog confirmation
  (#2911520 Matthieu Casanova)

- The macro Display_Abbreviations is broken (#3539691 Matthieu Casanova)
  [5.0pre2]

}}}
{{{ API Changes

- New method IOUtilities.closeQuietly(ObjectInput) (Matthieu Casanova)

- New method IOUtilities.closeQuietly(ObjectOutput) (Matthieu Casanova)
